force-app/main/default/objects/Case/fields/Asset_Tag__c.field-meta.xml
<CustomField>
    <fullName>Asset_Tag__c</fullName>
    <label>Asset Tag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>