force-app/main/default/objects/Case/fields/Sub_category__c.field-meta.xml
<CustomField>
    <fullName>Sub_category__c</fullName>
    <label>Sub category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>MS Office</fullName>
            </value>
            <value>
                <fullName>VS Code</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>VPN</fullName>
            </value>
            <value>
                <fullName>Wi-Fi</fullName>
            </value>
            <value>
                <fullName>LAN</fullName>
            </value>
            <value>
                <fullName>Password Reset</fullName>
            </value>
            <value>
                <fullName>New User</fullName>
            </value>
            <value>
                <fullName>Role Change</fullName>
            </value>
            <value>
                <fullName>Outlook</fullName>
            </value>
            <value>
                <fullName>Distribution List</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>