force-app/main/default/objects/Case/recordTypes/Service_Request.recordType-meta.xml
<RecordType>
    <fullName>Service_Request</fullName>
    <active>true</active>
    <businessProcess>IT Support Process</businessProcess>
    <label>Service Request</label>
</RecordType>